# crash_course

./: .gitignore  README
Module_0_intro/: TaskDescription
Module_0_intro/src/: main.cpp
Module_1_memory/: CMakeLists.txt  Info  TaskDescription
Module_1_memory/src/: array_2d.cpp  array_2d.hpp  heat_equation.cpp  heat_equation.hpp  main.cpp  writer.hpp
Module_1_solution/: CMakeLists.txt
Module_1_solution/src/: CMakeLists.txt  array_2d.cpp  array_2d.hpp  boundaries.hpp  boundary.cpp  boundary.hpp  boundary_dirichlet.cpp  boundary_dirichlet.hpp  difference_operator.cpp  difference_operator.hpp  equation.hpp  heat_equation.cpp  heat_equation.hpp  main.cpp  writer.cpp  writer.hpp
Module_1_solution/tests/: CMakeLists.txt
Module_1_solution/tests/unittests/: CMakeLists.txt  test.cpp  test_array2d.cpp  test_boundary_dirichlet.cpp  test_difference_operator.cpp
Module_2_mathlibrary/: CMakeLists.txt  TaskDescription
Module_2_mathlibrary/lib/: CMakeLists.txt
Module_2_mathlibrary/lib/math/: CMakeLists.txt  math_matrix.hpp  math_vector.cpp  math_vector.hpp
Module_2_mathlibrary/src/: CMakeLists.txt
Module_2_mathlibrary/src/app1/: CMakeLists.txt  main.cpp  some_class.hpp
Module_2_mathlibrary/tests/: CMakeLists.txt
Module_2_mathlibrary/tests/test_math/: test_vector.cpp
